Changes between 1.3 and 1.3.1
=============================
- Fixed "add bookmark" for the case where there's no selection
- Keep bookmark valid after deleting its paragraph

Last changes for KWord-1.3
==========================
- Load and save the frames order ("z index")
- Fixed swapped resize mouse cursors with Qt-3.1.2
- Fixed table column resizing (avoid overlapping columns)

Changes after KWord 1.3 rc (1.2.94)
===================================
- Fixed crash in table operations (#66349)
- Fixed crash in table iterator
- Fixed "edit frameset" for tables in doc structure panel (#67084)
- Save "no underline" explicitely if the paraglayout says "underline" but the
  user removed the underline (#67735)
- Fixed successive image DnD
- Fixed the default document font (#69166)

Changes after KWord 1.3 beta4
=============================
- fix for frames extending beyond the page getting the wrong size in 'preview mode'
- Fixed wrong layouting of inline frames (e.g. pictures)
- Don't select inline frame after pasting text containing it (only select non-inline frames)
- Improved "create style from selection": use format at cursor if no selection,
  allow to type the name of an existing style to update it, and select the style
  for the current paragraph after creating it.

Changes after KWord-1.3-beta3
=============================
- Fixed handling of part frames (clicking didn't select it anymore, #63041)
- Fixed cursor shape when pressing Ctrl.
- Unbreak text view mode (cursor disappeared, #57554)

Changes after KWord-1.3-beta2
=============================
- Right-click on a selected frame shouldn't unselect it
- Esc to deselect all frames
- Fixed line-height bug due to hyphenation
- Make the text view mode work again
- Fix "frame borders always painted/printed even when off" (#45907)

Changes after KWord-1.3-beta1
=============================

- Frames default to "auto-resize" mode instead of "auto-create-new-page"